force-app/main/default/objects/Opportunity/fields/Fee_Structure__c.field-meta.xml
<CustomField>
    <fullName>Fee_Structure__c</fullName>
    <label>Fee Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Cost</fullName>
            </value>
            <value>
                <fullName>No Points</fullName>
            </value>
            <value>
                <fullName>Points and Fees</fullName>
            </value>
            <value>
                <fullName>Check with LO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>