force-app/main/default/objects/Opportunity/fields/Final_Conditions_In_By__c.field-meta.xml
<CustomField>
    <fullName>Final_Conditions_In_By__c</fullName>
    <label>Conditions Due</label>
    <type>Date</type>
</CustomField>