force-app/main/default/objects/Opportunity/fields/First_Payment__c.field-meta.xml
<CustomField>
    <fullName>First_Payment__c</fullName>
    <label>First Payment</label>
    <type>Date</type>
</CustomField>