force-app/main/default/objects/Opportunity/fields/First_Time_Homebuyer__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Homebuyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Time Homebuyer</label>
    <type>Checkbox</type>
</CustomField>