force-app/main/default/objects/Opportunity/fields/Flood_Cert__c.field-meta.xml
<CustomField>
    <fullName>Flood_Cert__c</fullName>
    <inlineHelpText>807 in Fee Itemization, paid to lender</inlineHelpText>
    <label>Flood Cert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>