force-app/main/default/objects/Opportunity/fields/Full_VOE__c.field-meta.xml
<CustomField>
    <fullName>Full_VOE__c</fullName>
    <label>Income Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loan_Income_Type</valueSetName>
    </valueSet>
</CustomField>