force-app/main/default/objects/Opportunity/fields/Future_Activities__c.field-meta.xml
<CustomField>
    <fullName>Future_Activities__c</fullName>
    <description>This field will hold the number of upcoming (open) Activities for the Opportunity.</description>
    <label>Future Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>