force-app/main/default/objects/Opportunity/fields/gfe2010Fee_ID__c.field-meta.xml
<CustomField>
    <fullName>gfe2010Fee_ID__c</fullName>
    <label>gfe2010Fee ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>