force-app/main/default/objects/Opportunity/fields/Gifts_Grants__c.field-meta.xml
<CustomField>
    <fullName>Gifts_Grants__c</fullName>
    <description>Total of any gifts and grants per Encompass field URLA.X150</description>
    <label>Gifts/Grants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>