force-app/main/default/objects/Opportunity/fields/Govt_Recording_Transfer_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Govt_Recording_Transfer_Taxes__c</fullName>
    <inlineHelpText>Total of Section 1200 in Fee Itemization, Includes Tax Stamps</inlineHelpText>
    <label>Govt Recording &amp; Transfer Taxes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>