force-app/main/default/objects/Opportunity/fields/Grid_Appraisal_Credit_VOE__c.field-meta.xml
<CustomField>
    <fullName>Grid_Appraisal_Credit_VOE__c</fullName>
    <description>Total Fees from the CX.CRM.GRID.APPCRVOE field in Encompass</description>
    <label>Grid - Appraisal/Credit/VOE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>