force-app/main/default/objects/Opportunity/fields/Grid_Lender_Fees__c.field-meta.xml
<CustomField>
    <fullName>Grid_Lender_Fees__c</fullName>
    <description>Total Fees from the CX.CRM.GRID.LENDER field in Encompass</description>
    <label>Total Lender Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>