force-app/main/default/objects/Opportunity/fields/Grid_Title_Escrow_Rec__c.field-meta.xml
<CustomField>
    <fullName>Grid_Title_Escrow_Rec__c</fullName>
    <description>Title/Esc/Rec Fees from the CX.CRM.GRID.TITLEESCREC field in Encompass</description>
    <label>Grid - Title/Escrow/Rec</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>