force-app/main/default/objects/Opportunity/fields/Grid_Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Grid_Total_Fees__c</fullName>
    <description>Total Fees from the CX.CRM.GRID.TOTALFEES field in Encompass</description>
    <label>Grid - Total Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>