force-app/main/default/objects/Opportunity/fields/HCLTV__c.field-meta.xml
<CustomField>
    <fullName>HCLTV__c</fullName>
    <label>HCLTV</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>