force-app/main/default/objects/Opportunity/fields/Heloc_Balance_Drawn__c.field-meta.xml
<CustomField>
    <fullName>Heloc_Balance_Drawn__c</fullName>
    <description>Total Open End Helo Draw Amount per Encompass field CASASRN.X167</description>
    <label>Heloc Balance Drawn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>