force-app/main/default/objects/Opportunity/fields/Heloc_Max_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Heloc_Max_Credit_Limit__c</fullName>
    <description>Total Open End Heloc Credit Limit per Encompass field CASASRN.X168</description>
    <label>Heloc Max Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>