force-app/main/default/objects/Opportunity/fields/Historical_Automation_Check__c.field-meta.xml
<CustomField>
    <fullName>Historical_Automation_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historical Automation Check</label>
    <type>Checkbox</type>
</CustomField>