force-app/main/default/objects/Opportunity/fields/HMDA_Action__c.field-meta.xml
<CustomField>
    <fullName>HMDA_Action__c</fullName>
    <label>HMDA Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active Loan</fullName>
            </value>
            <value>
                <fullName>Loan Originated</fullName>
            </value>
            <value>
                <fullName>Application approved but not accepted</fullName>
            </value>
            <value>
                <fullName>Application denied</fullName>
            </value>
            <value>
                <fullName>Application withdrawn</fullName>
            </value>
            <value>
                <fullName>File Closed for incompleteness</fullName>
            </value>
            <value>
                <fullName>Loan purchased by your institution</fullName>
            </value>
            <value>
                <fullName>Preapproval request denied by institution</fullName>
            </value>
            <value>
                <fullName>Preapproval request approved but not accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>