force-app/main/default/objects/Opportunity/fields/HMDA_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>HMDA_Action_Date__c</fullName>
    <label>HMDA Action Date</label>
    <type>Date</type>
</CustomField>