force-app/main/default/objects/Opportunity/fields/HOA_Docs_Ordered__c.field-meta.xml
<CustomField>
    <fullName>HOA_Docs_Ordered__c</fullName>
    <label>HOA Docs Ordered</label>
    <type>Date</type>
</CustomField>