force-app/main/default/objects/Opportunity/fields/HOA_Docs_Received__c.field-meta.xml
<CustomField>
    <fullName>HOA_Docs_Received__c</fullName>
    <label>HOA Docs Received</label>
    <type>Date</type>
</CustomField>