force-app/main/default/objects/Opportunity/fields/HOA_Docs_Required__c.field-meta.xml
<CustomField>
    <fullName>HOA_Docs_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOA Docs Required</label>
    <type>Checkbox</type>
</CustomField>