force-app/main/default/objects/Opportunity/fields/Hold_Until__c.field-meta.xml
<CustomField>
    <fullName>Hold_Until__c</fullName>
    <label>Silence Until</label>
    <type>Date</type>
</CustomField>