force-app/main/default/objects/Opportunity/fields/Impounds_Formula__c.field-meta.xml
<CustomField>
    <fullName>Impounds_Formula__c</fullName>
    <formula>CASE(TEXT(Impounds__c), 
  &quot;X&quot;, &quot;No&quot;, 
  &quot;No&quot;,  &quot;Yes&quot;, 
  &quot;Yes&quot;, &quot;No&quot;,
  &quot;Yes&quot;)</formula>
    <label>Impound Waiver</label>
    <type>Text</type>
</CustomField>