force-app/main/default/objects/Opportunity/fields/Inc_Borrower_Bonuses__c.field-meta.xml
<CustomField>
    <fullName>Inc_Borrower_Bonuses__c</fullName>
    <label>Borrower Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>