force-app/main/default/objects/Opportunity/fields/Inc_Borrower_Total__c.field-meta.xml
<CustomField>
    <fullName>Inc_Borrower_Total__c</fullName>
    <label>Borrower Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>