force-app/main/default/objects/Opportunity/fields/Inc_CoBorrower_Base__c.field-meta.xml
<CustomField>
    <fullName>Inc_CoBorrower_Base__c</fullName>
    <label>CoBorrower Base</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>