force-app/main/default/objects/Opportunity/fields/Inc_CoBorrower_NetRent__c.field-meta.xml
<CustomField>
    <fullName>Inc_CoBorrower_NetRent__c</fullName>
    <label>CoBorrower Net Rent Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>