force-app/main/default/objects/Opportunity/fields/Inc_CoBorrower_Overtime__c.field-meta.xml
<CustomField>
    <fullName>Inc_CoBorrower_Overtime__c</fullName>
    <label>CoBorrower OT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>