force-app/main/default/objects/Opportunity/fields/Inc_CoBorrower_Total__c.field-meta.xml
<CustomField>
    <fullName>Inc_CoBorrower_Total__c</fullName>
    <label>CoBorrower Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>