force-app/main/default/objects/Opportunity/fields/Inc_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Inc_Grand_Total__c</fullName>
    <formula>Scenario_Borrower_Total_Income__c + Scenario_CoBorrower_Total_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>