force-app/main/default/objects/Opportunity/fields/Inc_Total_Base__c.field-meta.xml
<CustomField>
    <fullName>Inc_Total_Base__c</fullName>
    <formula>Inc_Borrower_Base__c +  Inc_CoBorrower_Base__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Base Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>