force-app/main/default/objects/Opportunity/fields/Inc_Total_Bonuses__c.field-meta.xml
<CustomField>
    <fullName>Inc_Total_Bonuses__c</fullName>
    <formula>Inc_Borrower_Bonuses__c + Inc_CoBorrower_Bonuses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Total Bonuses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>