force-app/main/default/objects/Opportunity/fields/Inc_Total_Commission__c.field-meta.xml
<CustomField>
    <fullName>Inc_Total_Commission__c</fullName>
    <formula>Inc_Borrower_Commission__c + Inc_CoBorrower_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Total Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>