force-app/main/default/objects/Opportunity/fields/Inc_Total_DivInt__c.field-meta.xml
<CustomField>
    <fullName>Inc_Total_DivInt__c</fullName>
    <formula>Inc_Borrower_DIvInt__c + Inc_CoBorrower_DIvInt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Total Div/Int</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>