force-app/main/default/objects/Opportunity/fields/Inc_Total_NetRent__c.field-meta.xml
<CustomField>
    <fullName>Inc_Total_NetRent__c</fullName>
    <formula>Inc_Borrower_NetRent__c + Inc_CoBorrower_NetRent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Total Net Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>