force-app/main/default/objects/Opportunity/fields/Inc_Total_Other__c.field-meta.xml
<CustomField>
    <fullName>Inc_Total_Other__c</fullName>
    <formula>Inc_Borrower_Other__c + Inc_CoBorrower_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Total Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>