force-app/main/default/objects/Opportunity/fields/Inc_Total_Overtime__c.field-meta.xml
<CustomField>
    <fullName>Inc_Total_Overtime__c</fullName>
    <formula>Inc_Borrower_Overtime__c + Inc_CoBorrower_Overtime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Total Overtime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>