force-app/main/default/objects/Opportunity/fields/Income_Subject_Property_Net__c.field-meta.xml
<CustomField>
    <fullName>Income_Subject_Property_Net__c</fullName>
    <label>Income Subject Prop Net</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>