force-app/main/default/objects/Opportunity/fields/Income_Submission_Notes__c.field-meta.xml
<CustomField>
    <fullName>Income_Submission_Notes__c</fullName>
    <description>Income section of the submission notes</description>
    <label>Income</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>