force-app/main/default/objects/Opportunity/fields/IncomeType__c.field-meta.xml
<CustomField>
    <fullName>IncomeType__c</fullName>
    <label>Income Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loan_Income_Type</valueSetName>
    </valueSet>
</CustomField>