force-app/main/default/objects/Opportunity/fields/IncOth1_Amount__c.field-meta.xml
<CustomField>
    <fullName>IncOth1_Amount__c</fullName>
    <label>Other Income 1 Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>