force-app/main/default/objects/Opportunity/fields/IncOth1_Description__c.field-meta.xml
<CustomField>
    <fullName>IncOth1_Description__c</fullName>
    <label>Other Income 1 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>