force-app/main/default/objects/Opportunity/fields/IncOth2_Amount__c.field-meta.xml
<CustomField>
    <fullName>IncOth2_Amount__c</fullName>
    <label>Other Income 2 Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>