force-app/main/default/objects/Opportunity/fields/IncOth3_BC__c.field-meta.xml
<CustomField>
    <fullName>IncOth3_BC__c</fullName>
    <label>Other Income 3 B/C</label>
    <length>2</length>
    <type>Text</type>
</CustomField>