force-app/main/default/objects/Opportunity/fields/Initial_Docs_In_By__c.field-meta.xml
<CustomField>
    <fullName>Initial_Docs_In_By__c</fullName>
    <label>Initial Docs Due</label>
    <type>Date</type>
</CustomField>