force-app/main/default/objects/Opportunity/fields/Intent_to_Proceed__c.field-meta.xml
<CustomField>
    <fullName>Intent_to_Proceed__c</fullName>
    <label>Intent to Proceed</label>
    <type>Date</type>
</CustomField>