force-app/main/default/objects/Opportunity/fields/Interest_Rate_Per_Period__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Per_Period__c</fullName>
    <description>This field will hold the interest rate calculated out by the period (i.e. 12 months).</description>
    <label>Interest Rate Per Period</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>