force-app/main/default/objects/Opportunity/fields/Interest_Rate_SF__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_SF__c</fullName>
    <description>Interest rate field post the Encompass Connector integration to avoid interference with the EM package field with the same API name (Interest_Rate_c)</description>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>