force-app/main/default/objects/Opportunity/fields/intuit_apps__intuitInvoiceStatus__c.field-meta.xml
<CustomField>
    <fullName>intuit_apps__intuitInvoiceStatus__c</fullName>
    <description>Invoice status from QuickBooks</description>
    <label>Intuit Invoice Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>