force-app/main/default/objects/Opportunity/fields/intuit_apps__invoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>intuit_apps__invoiceAmount__c</fullName>
    <description>Invoice amount from QuickBooks</description>
    <label>Intuit Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>