force-app/main/default/objects/Opportunity/fields/intuit_apps__invoiceCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>intuit_apps__invoiceCreatedDate__c</fullName>
    <description>Invoice created date from QuickBooks</description>
    <label>Intuit Invoice Created Date</label>
    <type>DateTime</type>
</CustomField>