force-app/main/default/objects/Opportunity/fields/intuit_apps__invoiceDueDate__c.field-meta.xml
<CustomField>
    <fullName>intuit_apps__invoiceDueDate__c</fullName>
    <description>Invoice due date from QuickBooks</description>
    <label>Intuit Invoice Due Date</label>
    <type>Date</type>
</CustomField>