force-app/main/default/objects/Opportunity/fields/intuit_apps__invoiceId__c.field-meta.xml
<CustomField>
    <fullName>intuit_apps__invoiceId__c</fullName>
    <description>Invoice id from quickbooks.</description>
    <label>Intuit Invoice Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>