force-app/main/default/objects/Opportunity/fields/intuit_apps__invoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>intuit_apps__invoiceNumber__c</fullName>
    <description>Invoice number from quickbooks.</description>
    <label>Intuit Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>