force-app/main/default/objects/Opportunity/fields/Last_Point_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Point_Update__c</fullName>
    <label>Last Point Update</label>
    <type>DateTime</type>
</CustomField>