force-app/main/default/objects/Opportunity/fields/LE_Acknowledged_By__c.field-meta.xml
<CustomField>
    <fullName>LE_Acknowledged_By__c</fullName>
    <label>Acknowledge LE</label>
    <type>Date</type>
</CustomField>