force-app/main/default/objects/Opportunity/fields/LE_Issued__c.field-meta.xml
<CustomField>
    <fullName>LE_Issued__c</fullName>
    <label>LE Issued</label>
    <type>Date</type>
</CustomField>