force-app/main/default/objects/Opportunity/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <label>Lender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>United Wholesale</fullName>
                <label>UWM</label>
            </value>
            <value>
                <fullName>PennyMac</fullName>
            </value>
            <value>
                <fullName>Freedom Mortgage</fullName>
            </value>
            <value>
                <fullName>Flagstar</fullName>
            </value>
            <value>
                <fullName>New Rez</fullName>
            </value>
            <value>
                <fullName>The Loan Store</fullName>
            </value>
            <value>
                <fullName>Plaza</fullName>
            </value>
            <value>
                <fullName>MortgageOne</fullName>
            </value>
            <value>
                <fullName>HomeXpress</fullName>
            </value>
            <value>
                <fullName>Acra</fullName>
            </value>
            <value>
                <fullName>Kind Lending</fullName>
            </value>
            <value>
                <fullName>FBC</fullName>
            </value>
            <value>
                <fullName>NexBank</fullName>
            </value>
            <value>
                <fullName>EPM</fullName>
            </value>
            <value>
                <fullName>Quontic</fullName>
            </value>
            <value>
                <fullName>Angel Oak</fullName>
            </value>
            <value>
                <fullName>Mega Capital</fullName>
            </value>
            <value>
                <fullName>REMN</fullName>
            </value>
            <value>
                <fullName>NQM Funding</fullName>
            </value>
            <value>
                <fullName>Symmetry</fullName>
            </value>
            <value>
                <fullName>Quorum FCU</fullName>
            </value>
            <value>
                <fullName>Deephaven</fullName>
            </value>
            <value>
                <fullName>Fund Loans</fullName>
            </value>
            <value>
                <fullName>Change Wholesale</fullName>
            </value>
            <value>
                <fullName>Advancial Financial</fullName>
            </value>
            <value>
                <fullName>PRMG</fullName>
            </value>
            <value>
                <fullName>PBM</fullName>
            </value>
            <value>
                <fullName>Long Bridge</fullName>
            </value>
            <value>
                <fullName>Private Lien</fullName>
            </value>
            <value>
                <fullName>Rocket Mortgage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>