force-app/main/default/objects/Opportunity/fields/Lender_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Lender_Admin_Fee__c</fullName>
    <label>Lender Admin Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>