force-app/main/default/objects/Opportunity/fields/Lender_AE__c.field-meta.xml
<CustomField>
    <fullName>Lender_AE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lender AE</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Company</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Type</field>
            <operation>equals</operation>
            <value>Lender / Bank</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loans (Lender AE)</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>