force-app/main/default/objects/Opportunity/fields/Lender_Credit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Lender_Credit_Percentage__c</fullName>
    <label>Lender Credit %</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>