force-app/main/default/objects/Opportunity/fields/Lender_Discount__c.field-meta.xml
<CustomField>
    <fullName>Lender_Discount__c</fullName>
    <label>Lender Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>