force-app/main/default/objects/Opportunity/fields/Lender_Paid_Comp__c.field-meta.xml
<CustomField>
    <fullName>Lender_Paid_Comp__c</fullName>
    <label>Lender Paid Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>