force-app/main/default/objects/Opportunity/fields/Lien_Position__c.field-meta.xml
<CustomField>
    <fullName>Lien_Position__c</fullName>
    <label>Lien Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Mortgage</fullName>
                <default>true</default>
                <label>First Mortgage</label>
            </value>
            <value>
                <fullName>Second Mortgage</fullName>
            </value>
            <value>
                <fullName>HELOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>