force-app/main/default/objects/Opportunity/fields/Loan_Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Anniversary_Date__c</fullName>
    <description>This hidden field will store the actual date of the loan anniversary and is used in report filtering, but is not displayed in the UI.</description>
    <formula>IF(IsWon, 
 
IF( 
AND(DAY(CloseDate)=29, MONTH(CloseDate)=2), 
IF(DATE(YEAR(TODAY()), 3,1)&gt;= TODAY(), DATE(YEAR(TODAY()),3,1), DATE(YEAR(TODAY())+1,3,1)), 


IF(DATE(YEAR(TODAY()), MONTH(CloseDate), DAY(CloseDate))&gt;= TODAY(), 
DATE(YEAR(TODAY()), MONTH(CloseDate), DAY(CloseDate)), 
DATE(YEAR(TODAY())+1, MONTH(CloseDate), DAY(CloseDate))) 

) 

,
null
)</formula>
    <label>Loan Anniversary Date</label>
    <type>Date</type>
</CustomField>