force-app/main/default/objects/Opportunity/fields/Loan_Contingency__c.field-meta.xml
<CustomField>
    <fullName>Loan_Contingency__c</fullName>
    <label>Loan Contingency</label>
    <type>Date</type>
</CustomField>