force-app/main/default/objects/Opportunity/fields/Loan_Estimate_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Estimate_Ordered_Date__c</fullName>
    <label>Loan Estimate</label>
    <type>Date</type>
</CustomField>