force-app/main/default/objects/Opportunity/fields/Loan_Originator_Encompass__c.field-meta.xml
<CustomField>
    <fullName>Loan_Originator_Encompass__c</fullName>
    <label>Loan Originator Encompass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>